# ChessEngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
cmake/: ClangTidy.cmake  Doxygen.cmake  Format.cmake  Valgrind.cmake
docs/: Doxyfile  Doxyfile.in
src/: CMakeLists.txt  sum.cpp
test/: CMakeLists.txt  test_sum.cpp
